# MeshlessDeformations

./: #main.cpp#  #shapematching.cpp#  .#shapematching.cpp  .gitignore  CMakeLists.txt  README.md  adjacency.cpp  adjacency.cpp~  adjacency.h  adjacency.h~  integration.cpp  integration.cpp~  integration.h  integration.h~  main.cpp  shapematching.cpp  shapematching.h
animations/: CMakeLists.txt  falling.cpp  falling_with_rebound.cpp  pulling.cpp  pulling.cpp~  rebound.cpp  stretching.cpp  test.cpp~  testing.cpp  testing.cpp~
src/: CMakeLists.txt  clustering.cpp  clustering.cpp~  clustering.h  deformation.h  integration.cpp  integration.h  shapematching.cpp  shapematching.h
